# multitheftauto-archived

./: Makefile.am  configure.ac
MTA10/: version.h
MTA10/core/: CChat.cpp  CChat.h  CClientVariables.cpp  CClientVariables.h  CCommandFuncs.cpp  CCommandFuncs.h  CCommands.cpp  CCommands.h  CCommunity.cpp  CCommunity.h  CConnectManager.cpp  CConnectManager.h  CConsole.cpp  CConsole.h  CConsoleHistory.cpp  CConsoleHistory.h  CCore.cpp  CCore.h  CCredits.cpp  CDebugView.cpp  CDebugView.h  CDirect3DEvents9.cpp  CFavouritesAddByIP.cpp  CFilePathTranslator.cpp  CFilePathTranslator.h  CFileSystemHook.cpp  CFileSystemHook.h  CFileSystemMemoryHandleManager.cpp  CFileSystemMemoryHandleManager.h  CGUI.cpp  CGUI.h  CGraphics.cpp  CGraphics.h  CKeyBinds.cpp  CKeyBinds.h  CLanguageLocale.cpp  CLanguageLocale.h  CLogger.cpp  CLogger.h  CMainConfig.cpp  (+34 more)
MTA10/core/tracking/: CHTTPClient.cpp  CHTTPClient.h  CHTTPResponse.cpp
MTA10/game_sa/: C3DMarkerSA.cpp  C3DMarkerSA.h  C3DMarkersSA.cpp  C3DMarkersSA.h  CAERadioTrackManagerSA.cpp  CAERadioTrackManagerSA.h  CAnimManagerSA.cpp  CAnimManagerSA.h  CAudioEngineSA.cpp  CAudioEngineSA.h  CAudioSA.cpp  CAudioSA.h  CAutomobileSA.h  CCamSA.cpp  CCamSA.h  CCameraSA.cpp  CCameraSA.h  CCarGeneratorSA.h  CCheckpointSA.cpp  CCheckpointSA.h  CCheckpointsSA.cpp  CCheckpointsSA.h  CCivilianPedSA.cpp  CClockSA.cpp  CClockSA.h  CColPointSA.h  CControllerConfigManagerSA.cpp  CCoronasSA.cpp  CCoronasSA.h  CDamageManagerSA.cpp  CDamageManagerSA.h  CDoorSA.cpp  CDoorSA.h  CEntitySA.cpp  CEntitySA.h  CEventDamageSA.cpp  CEventListSA.cpp  CEventListSA.h  CEventSA.cpp  CEventSA.h  (+92 more)
MTA10/gui/: CGUIButton_Impl.cpp  CGUICheckBox_Impl.cpp  CGUIEdit_Impl.cpp  CGUIElement_Impl.cpp  CGUIElement_Impl.h  CGUIGridList_Impl.cpp  CGUIGridList_Impl.h  CGUILabel_Impl.cpp  CGUIMemo_Impl.cpp  CGUIMessageBox_Impl.cpp  CGUIRadioButton_Impl.cpp  CGUIScrollBar_Impl.cpp  CGUITabPanel_Impl.cpp  CGUITabPanel_Impl.h  CGUITab_Impl.cpp  CGUIWindow_Impl.cpp  CGUI_Impl.cpp  CGUI_Impl.h  StdInc.h
MTA10/loader/: Main.cpp  Main.h
MTA10/mods/deathmatch/: CClient.cpp  Client.cpp  ClientCommands.cpp  ClientCommands.h  StdInc.h  _Deathmatch 2005.vcproj  _Deathmatch 2008.vcproj
MTA10/mods/shared_logic/: CClientCRC32Hasher.h  CClientCamera.h  CClientCheckpoint.h  CClientCivilian.h  CClientCivilianManager.cpp  CClientCivilianManager.h  CClientColCircle.h  CClientColCuboid.h  CClientColManager.cpp  CClientColManager.h  CClientColModelManager.h  CClientColRectangle.h  CClientColShape.cpp  CClientColShape.h  CClientColSphere.h  CClientColTube.h  CClientDFFManager.h  CClientDisplayGroup.h  CClientDisplayManager.cpp  CClientDisplayManager.h  CClientEntity.cpp  CClientEntity.h  CClientGUIElement.cpp  CClientGUIElement.h  CClientGUIManager.cpp  CClientGUIManager.h  CClientGroups.cpp  CClientGroups.h  CClientManager.cpp  CClientManager.h  CClientMarker.cpp  CClientMarkerManager.cpp  CClientMarkerManager.h  CClientModelRequestManager.cpp  CClientModelRequestManager.h  CClientObject.cpp  (+76 more)
MTA10/multiplayer_sa/: CMultiplayerSA.cpp  CMultiplayerSA.h  COffsets.cpp  CPopulationSA.cpp  CPopulationSA.h  CRemoteDataSA.cpp  CRemoteDataSA.h  StdInc.h  multiplayer_hooksystem.cpp  multiplayer_hooksystem.h  multiplayer_keysync.cpp  multiplayer_shotsync.cpp
MTA10_Server/: Makefile.am
MTA10_Server/core/: CCrashHandler.cpp  CCrashHandlerAPI.cpp  CCrashHandlerAPI.h  CDynamicLibrary.cpp  CModManagerImpl.cpp  CServerImpl.cpp  CServerImpl.h  CThreadCommandQueue.cpp  CThreadCommandQueue.h  Makefile.am  Server.cpp
MTA10_Server/core/sockets/: CTCPClientSocketImpl.cpp  CTCPImpl.cpp  CTCPServerSocketImpl.cpp  CTCPServerSocketImpl.h  CTCPServerSocketImplManager.cpp  CTCPServerSocketImplManager.h
MTA10_Server/launcher/: Makefile.am
MTA10_Server/mods/deathmatch/: Config.h  Makefile.am  StdInc.h  acl.xml  editor.conf  local.conf  mtaserver.conf
MTA10_Server/mods/deathmatch/logic/: ASE.cpp  ASE.h  CAccessControlList.h  CAccessControlListGroup.cpp  CAccessControlListGroup.h  CAccessControlListManager.h  CAccount.cpp  CAccountManager.cpp  CAccountManager.h  CBan.cpp  CBan.h  CBanManager.cpp  CBanManager.h  CBlipManager.h  CColManager.cpp  CColManager.h  CColShape.h  CCommandFile.cpp  CCommandLineParser.cpp  CCommandLineParser.h  CCommon.h  CConnectHistory.h  CConsole.h  CConsoleCommands.cpp  CConsoleCommands.h  CCustomData.cpp  CCustomData.h  CElement.cpp  CElement.h  CElementDeleter.h  CElementGroup.h  CEvents.h  CGame.cpp  CGame.h  CGroups.h  CHTTPD.cpp  CHandlingManager.h  CLogger.cpp  CMainConfig.cpp  CMainConfig.h  (+72 more)
MTA10_Server/mods/deathmatch/logic/common/: CGenericManager.h
MTA10_Server/mods/deathmatch/logic/lua/: CLuaArgument.cpp  CLuaArgument.h  CLuaArguments.cpp  CLuaArguments.h  CLuaCFunctions.cpp  CLuaFunctionDefinitions.cpp  CLuaFunctionDefinitions.h  CLuaMain.cpp  CLuaManager.cpp  CLuaModuleManager.cpp  CLuaModuleManager.h  CLuaTimerManager.h  LuaCommon.cpp  LuaCommon.h
MTA10_Server/mods/deathmatch/logic/luadefs/: CLuaACLDefs.cpp  CLuaACLDefs.h  CLuaCameraDefs.cpp  CLuaCameraDefs.h  CLuaDefs.cpp  CLuaDefs.h  CLuaFileDefs.cpp  CLuaXMLDefs.cpp
MTA10_Server/mods/deathmatch/logic/packets/: CCameraSyncPacket.h  CEntityAddPacket.cpp  CEntityAddPacket.h  CEntityRemovePacket.h  CKeysyncPacket.cpp  CKeysyncPacket.h  CMapInfoPacket.cpp  CMapInfoPacket.h  CPacket.cpp  CPacket.h  CPedSyncPacket.h  CPickupHideShowPacket.h  CPlayerListPacket.h  CPlayerPuresyncPacket.cpp  CPlayerPuresyncPacket.h  CResourceStartPacket.cpp  CResourceStartPacket.h  CResourceStopPacket.cpp  CResourceStopPacket.h  CUnoccupiedVehicleSyncPacket.h  CVehiclePuresyncPacket.cpp  CVehiclePuresyncPacket.h  CVehicleSpawnPacket.h
MTA10_Server/mods/deathmatch/utils/zip/: crc32.cpp  crc32.h
MTA10_Server/sdk/: Makefile.am  Platform.cpp  Platform.h
Shared/XML/: CXMLArray.cpp  CXMLArray.h  CXMLAttributeImpl.cpp  CXMLAttributesImpl.h  CXMLNodeImpl.cpp  CXMLNodeImpl.h  Makefile.am  StdInc.h  XML.cpp
Shared/installer/: eula.txt
Shared/sdk/: CMatrix.h  CMatrix_Pad.h  CQuat.h  CVector.h  CVector2D.h  Common.h  SharedUtil.h
utils/: fix_global_propsets.sh
(+148 files in other folders)
