INCLUDES += -I$(srcdir)/../sdk/
INCLUDES += -I$(srcdir)/../../Shared/sdk/

lib_LTLIBRARIES = \
	libcore.la

libcore_la_SOURCES = \
	CCrashHandlerAPI.cpp \
	CCrashHandlerAPI.h \
	CCrashHandler.cpp \
	CCrashHandler.h \
	CCriticalSection.h \
	CDynamicLibrary.cpp \
	CDynamicLibrary.h \
	CModManagerImpl.cpp \
	CModManagerImpl.h \
	CServerImpl.cpp \
	CServerImpl.h \
	CThreadCommandQueue.cpp \
	CThreadCommandQueue.h \
	ErrorCodes.h \
	Server.cpp \
	sockets/CTCPClientSocketImpl.cpp \
	sockets/CTCPClientSocketImpl.h \
	sockets/CTCPImpl.cpp \
	sockets/CTCPImpl.h \
	sockets/CTCPServerSocketImpl.cpp \
	sockets/CTCPServerSocketImpl.h \
	sockets/CTCPServerSocketImplManager.cpp \
	sockets/CTCPServerSocketImplManager.h

