INCLUDES += -I$(srcdir)/logic/
INCLUDES += -I$(srcdir)/../../sdk/
INCLUDES += -I$(srcdir)/../../../Shared/sdk/
INCLUDES += -I$(srcdir)/../../../Shared/publicsdk/include/


lib_LTLIBRARIES = \
	libdeathmatch.la

libdeathmatch_la_SOURCES = \
	logic/CResourceHTMLItem.cpp \
	logic/CMapFile.cpp \
	logic/CCommandFile.cpp \
	logic/CWhoWas.cpp \
	logic/CTextItem.cpp \
	logic/CPacketTranslator.cpp \
	logic/CResourceScriptItem.cpp \
	logic/CHandling.cpp \
	logic/CPedManager.cpp \
	logic/CTeamManager.cpp \
	logic/CElementIDs.cpp \
	logic/CMainConfig.cpp \
	logic/CClient.cpp \
	logic/CScriptFile.cpp \
	logic/CElement.cpp \
	logic/CBlipManager.cpp \
	logic/CBanManager.cpp \
	logic/Utils.cpp \
	logic/CWeaponNames.cpp \
	logic/CMD5Hasher.cpp \
	logic/CResource.cpp \
	logic/CPlayerClothes.cpp \
	logic/CConsoleCommands.cpp \
	logic/CHTTPD.cpp \
	logic/lua/CLuaArgument.cpp \
	logic/lua/CLuaTimerManager.cpp \
	logic/lua/CLuaMain.cpp \
	logic/lua/CLuaManager.cpp \
	logic/lua/CLuaFunctionDefinitions.cpp \
	logic/lua/CLuaTimer.cpp \
	logic/lua/CLuaCFunctions.cpp \
	logic/lua/LuaCommon.cpp \
	logic/lua/CLuaModuleManager.cpp \
	logic/lua/CLuaArguments.cpp \
	logic/CPerPlayerEntity.cpp \
	logic/CPedSync.cpp \
	logic/CCustomData.cpp \
	logic/CAccountManager.cpp \
	logic/CPlayerCamera.cpp \
	logic/CXMLConfig.cpp \
	logic/CRegisteredCommands.cpp \
	logic/CElementDeleter.cpp \
	logic/CResourceConfigItem.cpp \
	logic/CVehicle.cpp \
	logic/CScriptDebugging.cpp \
	logic/CRemoteCalls.cpp \
	logic/CConnectHistory.cpp \
	logic/CMapEventManager.cpp \
	logic/CColTube.cpp \
	logic/CVehicleColor.cpp \
	logic/CPad.cpp \
	logic/CElementGroup.cpp \
	logic/CConfig.cpp \
	logic/CPickup.cpp \
	logic/CAccessControlListGroup.cpp \
	logic/CUnoccupiedVehicleSync.cpp \
	logic/CAccessControlListRight.cpp \
	logic/CBlendedWeather.cpp \
	logic/CRadarArea.cpp \
	logic/CPlayerTextManager.cpp \
	logic/CColShape.cpp \
	logic/CGame.cpp \
	logic/CMapManager.cpp \
	logic/CDummy.cpp \
	logic/CConsoleClient.cpp \
	logic/CKeyBinds.cpp \
	logic/CVehicleColorManager.cpp \
	logic/CHandlingManager.cpp \
	logic/CStaticFunctionDefinitions.cpp \
	logic/CMarkers.cpp \
	logic/CObject.cpp \
	logic/CTeam.cpp \
	logic/CColRectangle.cpp \
	logic/packets/CPlayerListPacket.cpp \
	logic/packets/CEntityRemovePacket.cpp \
	logic/packets/CMapInfoPacket.cpp \
	logic/packets/CPlayerJoinDataPacket.cpp \
	logic/packets/CVehicleInOutPacket.cpp \
	logic/packets/CPlayerPuresyncPacket.cpp \
	logic/packets/CUnoccupiedVehicleSyncPacket.cpp \
	logic/packets/CVehiclePuresyncPacket.cpp \
	logic/packets/CVehicleSpawnPacket.cpp \
	logic/packets/CServerTextItemPacket.cpp \
	logic/packets/CLuaPacket.cpp \
	logic/packets/CFireSyncPacket.cpp \
	logic/packets/CPlayerPingsPacket.cpp \
	logic/packets/CDebugEchoPacket.cpp \
	logic/packets/CConsoleEchoPacket.cpp \
	logic/packets/CPlayerJoinCompletePacket.cpp \
	logic/packets/CCustomDataPacket.cpp \
	logic/packets/CPlayerJoinPacket.cpp \
	logic/packets/CCameraSyncPacket.cpp \
	logic/packets/CDetonateSatchelsPacket.cpp \
	logic/packets/CEntityAddPacket.cpp \
	logic/packets/CCommandPacket.cpp \
	logic/packets/CReturnSyncPacket.cpp \
	logic/packets/CPlayerTimeoutPacket.cpp \
	logic/packets/CResourceStartPacket.cpp \
	logic/packets/CPlayerClothesPacket.cpp \
	logic/packets/CPickupHideShowPacket.cpp \
	logic/packets/CPlayerWastedPacket.cpp \
	logic/packets/CPlayerDisconnectedPacket.cpp \
	logic/packets/CChatEchoPacket.cpp \
	logic/packets/CExplosionSyncPacket.cpp \
	logic/packets/CPedStartSyncPacket.cpp \
	logic/packets/CPlayerStatsPacket.cpp \
	logic/packets/CKeysyncPacket.cpp \
	logic/packets/CPacket.cpp \
	logic/packets/CPlayerQuitPacket.cpp \
	logic/packets/CPlayerChangeNickPacket.cpp \
	logic/packets/CProjectileSyncPacket.cpp \
	logic/packets/CVehicleTrailerPacket.cpp \
	logic/packets/CLuaEventPacket.cpp \
	logic/packets/CPlayerConnectCompletePacket.cpp \
	logic/packets/CResourceStopPacket.cpp \
	logic/packets/CPedSyncPacket.cpp \
	logic/packets/CUnoccupiedVehicleStartSyncPacket.cpp \
	logic/packets/CPlayerSpawnPacket.cpp \
	logic/packets/CVehicleDamageSyncPacket.cpp \
	logic/packets/CVoiceDataPacket.cpp \
	logic/packets/CPickupHitConfirmPacket.cpp \
	logic/CMarker.cpp \
	logic/CPed.cpp \
	logic/CColCircle.cpp \
	logic/CZoneNames.cpp \
	logic/CBlip.cpp \
	logic/CResourceClientFileItem.cpp \
	logic/CMapEvent.cpp \
	logic/CObjectManager.cpp \
	logic/CRegistry.cpp \
	logic/CResourceManager.cpp \
	logic/CConsoleCommand.cpp \
	logic/CPlayerTasks.cpp \
	logic/CClock.cpp \
	logic/ASE.cpp \
	logic/CMapFiles.cpp \
	logic/CColCuboid.cpp \
	logic/CGroups.cpp \
	logic/CPlayerStats.cpp \
	logic/CVehicleUpgrades.cpp \
	logic/CSerialManager.cpp \
	logic/CConsole.cpp \
	logic/CVehicleManager.cpp \
	logic/CCommandLineParser.cpp \
	logic/CAccessControlListManager.cpp \
	logic/CTextDisplay.cpp \
	logic/CVehicleNames.cpp \
	logic/CPlayerManager.cpp \
	logic/CResourceDownloader.cpp \
	logic/CRPCFunctions.cpp \
	logic/CVehicleDefaultColors.cpp \
	logic/CLogger.cpp \
	logic/CResourceFile.cpp \
	logic/CAccount.cpp \
	logic/CColSphere.cpp \
	logic/CResourceMapItem.cpp \
	logic/CPlayer.cpp \
	logic/CResourceClientScriptItem.cpp \
	logic/CSettings.cpp \
	logic/CColManager.cpp \
	logic/CRadarAreaManager.cpp \
	logic/CAccessControlList.cpp \
	logic/CBan.cpp \
	logic/luadefs/CLuaCameraDefs.cpp \
	logic/luadefs/CLuaHandlingDefs.cpp \
	logic/luadefs/CLuaWorldDefs.cpp \
	logic/luadefs/CLuaXMLDefs.cpp \
	logic/luadefs/CLuaResourceDefs.cpp \
	logic/luadefs/CLuaPickupDefs.cpp \
	logic/luadefs/CLuaFileDefs.cpp \
	logic/luadefs/CLuaTextDefs.cpp \
	logic/luadefs/CLuaElementDefs.cpp \
	logic/luadefs/CLuaDefs.cpp \
	logic/luadefs/CLuaHTTPDefs.cpp \
	logic/luadefs/CLuaACLDefs.cpp \
	logic/CPickupManager.cpp \
	logic/CResourceClientConfigItem.cpp \
	logic/CEvents.cpp \
	logic/TaskNames.cpp \
	utils/CHTTPClient.cpp \
	utils/zip/crc32.cpp \
	utils/CHTTPRequest.cpp \
	utils/CHTTPResponse.cpp \
	utils/CTCPClientSocketImpl.cpp \
	utils/base64.cpp \
	utils/CTCPImpl.cpp \
	CServer.cpp \
	Server.cpp \
	StdInc.cpp 

